# ChangeLog for dev-perl/set-scalar
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/set-scalar/ChangeLog,v 1.50 2014/03/12 10:05:46 ago Exp $

  12 Mar 2014; Agostino Sarubbo <ago@gentoo.org> set-scalar-1.260.0.ebuild:
  Stable for sparc, wrt bug #495552

  05 Mar 2014; Agostino Sarubbo <ago@gentoo.org> set-scalar-1.260.0.ebuild:
  Stable for ppc, wrt bug #495552

  02 Mar 2014; Pacho Ramos <pacho@gentoo.org> set-scalar-1.260.0.ebuild:
  amd64 stable, bug #495552

  24 Feb 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  set-scalar-1.260.0.ebuild:
  x86 stable wrt bug #495552

  16 Feb 2014; Markus Meier <maekke@gentoo.org> set-scalar-1.260.0.ebuild:
  arm stable, bug #495552

  11 Feb 2014; Jeroen Roovers <jer@gentoo.org> set-scalar-1.260.0.ebuild:
  Stable for HPPA (bug #495552).

  11 Feb 2014; Akinori Hattori <hattya@gentoo.org> set-scalar-1.260.0.ebuild:
  ia64 stable wrt bug #495552

*set-scalar-1.260.0 (25 Aug 2013)

  25 Aug 2013; Patrick Lauer <patrick@gentoo.org> +set-scalar-1.260.0.ebuild:
  Bump

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -set-scalar-1.25.ebuild:
  Cleanup

  03 Sep 2011; Torsten Veller <tove@gentoo.org> set-scalar-1.250.0.ebuild:
  Merge stable keywords from former version scheme ebuild

*set-scalar-1.250.0 (27 Aug 2011)

  27 Aug 2011; Torsten Veller <tove@gentoo.org> +set-scalar-1.250.0.ebuild:
  Change version scheme

  13 Aug 2010; Torsten Veller <tove@gentoo.org> -set-scalar-1.20.ebuild,
  -set-scalar-1.24.ebuild:
  Cleanup

  27 Jun 2010; <nixnut@gentoo.org> set-scalar-1.25.ebuild:
  ppc stable #323529

  08 May 2010; Raúl Porcel <armin76@gentoo.org> set-scalar-1.25.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #314467

  04 May 2010; Jeroen Roovers <jer@gentoo.org> set-scalar-1.25.ebuild:
  Stable for HPPA (bug #314467).
