@@ -3,24 +3,18 @@ Hash: SHA256
 
 DIST Set-Scalar-1.25.tar.gz 20575 SHA256 f5ec8d4947aa625edbc229cb609d6bb580d25c80fa6934f3bde031224ff26ecd SHA512 aab1e1f2a47169e3c03bc6810cff3695d63f46ea442220f533b66eccfc6c93a714533f3ec68281dbcc36573876e0f85f81ded8fe20f63a0c5c7ba3dd51510c52 WHIRLPOOL 338c93ed8697672d468dd7a8d61d3d78bd7e9f52186b280ccfe7e64000ef88cfef391e1faa78e240fc948d33bca061d643bb19db085dd874c961fa23c74518e5
 DIST Set-Scalar-1.26.tar.gz 21431 SHA256 887e408bd579175f00236929b00103347c3a3fa9f726fbe50e084c4c914d3988 SHA512 9b95f473e74598ab077c7e1aadade5c9609c82263864c3f0eee3b8937b62389c5abae6f1adf1e1eddbffad0b9d6f71259ecc593355e2c26ef6fd47ee0d1ba582 WHIRLPOOL aafb48aa186be4384062f5774b27fdc8c2b303ab23e3dd05b0fe55de030d8192005f53ac1d10321ab2bd310a504fead590772f552b9b44dd7379f10cb7b96b12
+DIST Set-Scalar-1.28.tar.gz 21521 SHA256 4c684759a2d1b1b684a39d22c32cf90440623c3933943e8c2b381a7b73e97ddc SHA512 b834418fccfc59aeaa9df1b6447947a4e95ec85c20ace3644ac653f2260bda9944da9e9bab51ab1d76ca3578709d248274acb05ebccb00d24c8cd37bc799bec2 WHIRLPOOL 49efc0486989148f694dccca74f12bf54df914c27637583a930e322ece4bda0270fc2bb0a29f61fcee7c1d0b6ec3b2f6d37be5577039c1227f8d56acc7ec71b5
 EBUILD set-scalar-1.250.0.ebuild 504 SHA256 4ec76fea2aee8e9c24af7b3c59ddfbf769e2b3f016a0d61f400cb0086ff4c66c SHA512 ce893d5bb82fd4712517d88515b699e037f8efe7a498efe32d3bc673ef5e16adee41fb88b78be96a80cfb8b37e93fb8951fe746ece0d1a45e92397872258eedf WHIRLPOOL 72f5cf867300db63b4ccf20cf0e0d341ba7fd1fc341b1804144287900185cf2bd5233755cefd4acbbaa3d7b1db60616fb88e041b385dfb4ad70f2be2b75e5004
 EBUILD set-scalar-1.260.0.ebuild 507 SHA256 d2e59929f51af8141fa0f84398ad85e8cb46bb9194327bc6923b57d250c5ba5c SHA512 e4f7593779df2dc5168682634a69e4b2e4882147e90227462862e4c038a2d601f7651eebbc0c407fee2aa9038ea2fda404a65ee79b9f5cbfb407ce7bd07b85d0 WHIRLPOOL f132923b308d0d517bc0fede38671996b8c51995a3d50669d65783dd278a0b5e4112101709418603b8454e1b7778b961cb64f671a031be371a7b9e9c44717782
-MISC ChangeLog 5770 SHA256 d6a667a3da81741f624ecd5e62776b0a318c1bfb32ad5a6c07d9d0a83aef7ebe SHA512 ee50b8706e31925897d9a057a3e37cd5f9cf2b66bc85790173a55d91ee051e2cca359e1352993b18702709d2521add8322eb35b79d81bdd270a2fb22569c5c0a WHIRLPOOL 8131e35abb36570b025ec7d7f0a6fdb45d16ee877403e4cb43bccb684237b1c6adbf27ba9d4620244ca6fcfddfa278152c3717eafad4a92a7f4081d020102e0e
+EBUILD set-scalar-1.280.0.ebuild 521 SHA256 95eb21194f74b9a6c32d4af50402022a97c92048c975383c44b5b5af1e7c4d87 SHA512 668a4a1662537f8290969690e4ba7fe0139ae8abcafd6e5f2d47ff0e0b7fd1cc62a685badaa3860963a3f4658b9e3e16f842de832f3071134566d9692dbfba7d WHIRLPOOL 4d33cb3c01639d6239de2e1297685a23b4e7a95088a909a4526c51975911b01712014fc090f9ea47dcf76d519937e0b65015fd4fe3cd13cabc92f95434309902
+MISC ChangeLog 5903 SHA256 74bd556ca48acfe323545ebe016b4f447b3f30d2ab46df1cd7ecef1bdd6c0ead SHA512 0dfdc8746a915042779fc8acb4baa2956e74b2f64e27f3632db41b3cd35bd8e27f2f31e53e3dce6212846c0917581df5ae9c848be3aeed5ea3302be39a1e6860 WHIRLPOOL 1e6adf8df15af300acf7bc8813bf0b34beab4e4cd2dc1a465099ad03f4e1c95f2bd9d89775b4d25a790063bffb4e03e754a06374cd61d27d8e63c4fd3b3d6401
 MISC metadata.xml 761 SHA256 8c4697923ecb4919df010e626b72bff9ccc109c675e4075781040eaa2b1fbb49 SHA512 e443c0c860fd573fea2e8df022c5b9bdde2c083bae81249983aeb8bb72cd5961ae62a94fed70d2a4622bb7c9e0d368b31b90d2ea8c0971c7fe6ac1cacd71b634 WHIRLPOOL ec6c8fcea5551d00d9c57e22315c36a294d31f35d62213164b7e65e1ba1d5588db50efbdb430f45f3b7cac9f751d04dae2ad03ef6fbfea67489e85722260ffbc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTIDF7AAoJELp701BxlEWfYZMQALK5s5uxWlJMs0/10RZLYWwe
-RPKhJJ/usSYbkgKqI9vqvWofb2hrnSyiQXW78WS6qtuMM6qM879BIunslgP6n1sj
-r68I6uWT01w8ndbUQR6p95P0B5dMO3d0nlrutCcFE5OwfFCL8wdIQxday2bleOeG
-k+tqzy9/WRil9QYexHPuqwlmhnyuVk+57h2q6hQeWLTUnuBlNkPUNPFdZ6TQgoCI
-sHc0HD+ueAc2xGUYr0aJ1DnH+TChEOXKkLWCL8RowAUk2skInofMaZjcIjkc7UUa
-GqtP9EkTQO+HVStNsP43jg1OjvkJ4NBDJhLmy7vgX+PA6Bn7IVKXoMevm5p1vNmO
-+JTZOgkU6vH9dX5K6RIiwSLHNNgSBMEzJyQS3+nTCVQKPHD7pkLU9Bc1eMtKTl3O
-zrgQzrUpNhdqYdlFbYloN82aP4v57X8sbadKUSA2UTKm9Z7bi2I1cxMLODL0r3hJ
-RH5rJmYMCa9IN5Z2nCx5n4i/JpU1PxvIHkjLk7u7uqSmvIg+PX18rdYzc/2ZqI5g
-aECLhe/p2lb93mftqI5gaeZEVyEnydTnf1hKozp5uJft6blLDQQS2Ggj84tcAv7+
-tlq6kgfNNiFMWtTnFTzvJD55WSVJadEFTKfh8g+9AeD0RdMyvHqafLqctZm+LO/G
-9MW7vU1FCZSycsO6TuG9
-=utGA
+iJwEAQEIAAYFAlMkKE8ACgkQG9wOWsQutdZBwAQAnot5UCekgW3+57aQruwQFioq
+N92QO8OnC4wX2RSmZfts1cNuv5El5kTOv7Mqv04D2pg/j8heb/RtjyISNf/6o/t8
+zUkBtVO/lzCUeB/n4J1mIEn6GYSWJebuEQ7EiUFaYLK0nbgw2SUELEAmU3RxUt3V
+hwhFELp3goduk4ZCc14=
+=lfp9
 -----END PGP SIGNATURE-----
